Refactor setjava.sh to use config scripts.